--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.application.name=api-g4
 
-spring.datasource.url=jdbc:h2:file:./h2/banco;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=
-
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/API-G4
+spring.datasource.username=postgres
+spring.datasource.password=123456
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
