Feat: modificação aplication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+dominio.openapi.dev-url:localhost:8080
+dominio.openapi.prod-url:https://www.grupo4.com.br
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
